--- a/css/main.scss
+++ b/css/main.scss
@@ -79,16 +79,16 @@ $text-color:       #000;
 $background-color: #ffffff;
 $brand-color:      #653d22;
 
-$olive-color:       #828282;
+$olive-color:       #6f7544;
 $purple:            #662d91;
 $green:            #39b54a;
 $teal:            #009ba9;
 $peach:            #e96548;
 $orange:            #ec972a;
 
-$mobile:          300px;
+$phone:          300px;
 $tab:          600px;
-$desk:        1000x;
+$desk:        1000px;
 
 
 
