--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
       
       <div class="row">
         
-        <div class="col-md-4 margin_t30 margin_b15 footer_logo" ><img class="center-block" src="images/footer_logo.png"></div>
+        <div class="col-md-4 margin_t30 margin_b15 footer_logo" ><img class="center-block" src="{{site.url}}/images/footer_logo.png"></div>
         <div class="col-xs-12 col-sm-5 col-md-4 privacy contact text-center margin_b15">
           <a href="">Privacy policy </a>|<a href=""> CONTACT</a>
           <div id="ciyc_social" class=" clearfix">
-            <span><img src="images/facebook.png"></span>
-            <span><img src="images/twitter.png"></span>
-            <span class="last"><img src="images/share.png"></span>
+            <span><img src="{{site.url}}/images/facebook.png"></span>
+            <span><img src="{{site.url}}/images/twitter.png"></span>
+            <span class="last"><img src="{{site.url}}/images/share.png"></span>
           </div>
         </div>
         <div class="col-xs-12 col-sm-7 col-md-4 text-center copywrite margin_b15">&copy; 2014 Con ‘Em If You Can. All rights reserved. </div>
