adding reap to quiz

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -86,7 +86,7 @@
 					  
 					    if(results_answers[i] === answer_key[i] ){
 					    	randome_i = Math.floor((Math.random() * 10))
-					    	feedback[i].innerHTML = correct_answer[(randome_i)] + randome_i; 
+					    	feedback[i].innerHTML = correct_answer[(randome_i)]; 
 					    	num_correct += 1;
 					    
 					    }else{
